git add . exoit

--- a/notes/templates/notes.html
+++ b/notes/templates/notes.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <h1> This are all notes:</h1>
+        <h1> These are all notes:</h1>
         <ul>
             {% for note in notes %}
                 <li>{{ note.title }}</li>
