adding the static css templates

--- a/notes/templates/notes.html
+++ b/notes/templates/notes.html
@@ -1,10 +1,10 @@
-<html>
-    <body>
+{% extends "base.html" %}
+
+{% block content %}
         <h1> These are all notes:</h1>
         <ul>
             {% for note in notes %}
-                <li>{{ note.title }}</li>
+                <li class="note-li">{{ note.title }}</li>
             {% endfor %}
         </ul>
-    </body>
-</html>
+{% endblock %}
