--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,6 +1,7 @@
 <html>
     <body>
         <h1>Hello {{ name }}</h1>
+        <a href="{% url 'notes.list'%}" class="btn btn-primary">Checkout these smart notes</a>
     </body>
 </html>
 
