--- a/notes/templates/notes.html
+++ b/notes/templates/notes.html
@@ -1,12 +1,22 @@
 {% extends "base.html" %}
-
+<html>
+    <body>
 {% block content %}
-        <h1> These are all notes:</h1>
-        {{note.title}}
-        <ul>
-            {% for note in notes %}
-                <li class="note-li">{{ note.title }}</li>
-                <li class="note-li">{{ note.text }}</li>
-            {% endfor %}
-        </ul>
+<h1 class="my-5"> These are all notes:</h1>
+<div class="row row-cols3 g-2">
+    {% for note in notes%}
+    <div class="col">
+        <div class="border border-primary">
+            <a href="{% url 'notes.details' pk=note.id %}"><h3 class="text-dark text-decoration-none">{{note.title}}</h3></a>
+            {{note.text | truncatechars:10}}
+        </div>
+       
+    </div>
+   
+    {% endfor %}
+</div>
+<a href="{% url 'notes.new' %}" class="btn btn-primary">ADD</a>
 {% endblock %}
+</body>
+
+</html>
