--- a/notes/templates/notes_form.html
+++ b/notes/templates/notes_form.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<form action="{% url 'notes.new' %}", method="post"> {%csrf_token%}
+<form method="post"> {%csrf_token%}
     {{ form }}
     <button type="submit" class="btn btn-primary my-5">submit</button>
 
