--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -4,7 +4,9 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     </head>
     <body>
+        <div class="my-5 text-center container">
         {% block content %}
         {% endblock %}
+    </div>
     </body>
 </html>
