--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,7 +1,10 @@
+{%extends 'base.html' %}
+{% block content%}
 <html>
     <body>
         <h1>Hello {{ name }}</h1>
         <a href="{% url 'notes.list'%}" class="btn btn-primary">Checkout these smart notes</a>
+        <a href="{% url 'login'%}" ><button class=" btn btn-danger"> Logout</button> </a>
     </body>
 </html>
-
+{% endblock%}
