--- a/notes/templates/notes_list.html
+++ b/notes/templates/notes_list.html
@@ -1,18 +1,22 @@
 {% extends "base.html" %}
-
+<html>
+    <body>
 {% block content %}
-        <h1 class="my-5"> These are all notes:</h1>
-        <div class="container">
-        <div class="row row-cols3 g-2">
-            {% for note in notes%}
-            <div class="col">
-                <div class="border border-primary">
-                    <h3>{{note.title}}</h3>
-                   <h5> {{note.text | truncaterchars:10}} </h5>
-                </div>
-                <a href="{% url 'notes.new' %}" class="btn btn-primary">ADD</a>
-            </div>
-            {% endfor %}
+<h1 class="my-5"> These are all notes:</h1>
+<div class="row row-cols3 g-2">
+    {% for note in notes%}
+    <div class="col">
+        <div class="border border-primary">
+            <a href="{% url 'notes.details' pk=note.id %}"><h3 class="text-dark text-decoration-none">{{note.title}}</h3></a>
+            {{note.text | truncatechars:10}}
         </div>
-        </div>
+       
+    </div>
+   
+    {% endfor %}
+</div>
+<a href="{% url 'notes.new' %}" class="btn btn-primary">ADD</a>
 {% endblock %}
+</body>
+
+</html>
