--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -4,6 +4,18 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     </head>
     <body>
+        <nav class="navbar navbar-dark bg-dark">
+            <div class="ms-auto">
+                {% if user.is_authenticated %}
+                <a href="{% url 'notes.list' %}" class="btn btn-outline-light me-1">Home</a>
+                <a href="{% url 'logout' %}" class="btn btn-outline-light me-1">Logout</a>
+                {% else %}
+                <a href="{% url 'login' %}" class="btn btn-outline-light me-1">Login</a>
+                <a href="{% url 'signup' %}" class="btn btn-outline-light me-1">Signup</a>
+                {% endif %}
+                
+            </div>
+        </nav>
         <div class="my-5 text-center container">
         {% block content %}
         {% endblock %}
